# public/api.yaml
@@ -1054,6 +1054,21 @@ paths:
                 type: array
                 items: 
                   type: string 
+  /products/no-reviews:
+    get:
+      summary: List no Reviews.
+      description: Optional extended description in CommonMark or HTML.
+      tags:
+      - Products
+      responses:
+        '200':    # status code
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema: 
+                type: array
+                items: 
+                  type: string
   /variants/list-variant:
     get:
       summary: List Variants.
@@ -1442,26 +1457,42 @@ paths:
   /reviews/approveAndreject/{status}/{reviews_id}:
     get:
       parameters:
-        - in: path
-          name: reviews_id   # Note the name is the same as in the path
+        - name: status
+          in: path
+          name: status
           required: true
           schema:
             type: string
-            minimum: 1
-          description: reviews_id
-      summary: List Reviews.
-      description: Optional extended description in CommonMark or HTML.
+          enum: [approve, disapprove]  # Define the possible values for status
+          description: Approve or disapprove the review. Use 'approve' to approve, 'disapprove' to disapprove.
+        - name: reviews_id
+          in: path
+          name: reviews_id
+          required: true
+          schema:
+            type: string
+          description: ID of the review to approve or disapprove.
+      summary: Approve or disapprove a review.
+      description: Approve or disapprove a review based on the status parameter.
       tags:
-      - Reviews
+        - Reviews
       responses:
         '200':    # status code
-          description: A JSON array of user names
+          description: Review status updated successfully.
           content:
             application/json:
               schema: 
-                type: array
-                items: 
+                type: object
+              properties:
+                success:
+                  type: boolean
+                  description: Indicates if the operation was successful.
+                message:
                   type: string
+                  description: A message describing the result.
+                data:
+                  type: object
+                  description: Data containing information about the operation.
   /reviews/user/{user_id}:
     get:
       parameters:
@@ -1507,22 +1538,7 @@ paths:
               schema: 
                 type: array
                 items: 
-                  type: string
-  /reviews/no-reviews:
-    get:
-      summary: List no Reviews.
-      description: Optional extended description in CommonMark or HTML.
-      tags:
-      - Reviews
-      responses:
-        '200':    # status code
-          description: A JSON array of user names
-          content:
-            application/json:
-              schema: 
-                type: array
-                items: 
-                  type: string
+                  type: string 
   /reviews/top-rated-products:
     get:
       summary: List TopRate Reviews.
@@ -1736,16 +1752,8 @@ paths:
                 type: array
                 items: 
                   type: string
-  /orders/cancel/{order_id}:
+  /orders/cancel:
     get:
-      parameters:
-        - in: path
-          name: order_id   # Note the name is the same as in the path
-          required: true
-          schema:
-            type: string
-            minimum: 1
-          description: order_id
       summary: List cancle Orders.
       description: Optional extended description in CommonMark or HTML.
       tags:
@@ -1774,23 +1782,28 @@ paths:
               properties:
                 user_id:
                   type: string
-                products:
+                payment_id:
+                  type: string
+                items:
                   type: array
                   items:
                     type: object
                     properties:
                       product_id:
                         type: string
+                        format: objectid
                       qty:
-                        type: integer
+                        type: number
+                        default: 0
+                shipping_address:
+                  type: string
                 amount:
                   type: number
                 status:
                   type: string
-                isActive:
-                  type: boolean
                 discount:
                   type: number
+                  default: 0
       responses:
         '200':    # status code
           description: A JSON array of user names
@@ -1829,6 +1842,34 @@ paths:
       description: Optional extended description in CommonMark or HTML.
       tags:
       - Payments
+      responses:
+        '200':    # status code
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema: 
+                type: array
+                items: 
+                  type: string
+  /payments/create-payment:
+    post:
+      summary: Add Payments.
+      description: Optional extended description in CommonMark or HTML.
+      tags:
+      - Payments
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                order_id:
+                  type: string
+                type:
+                  type: string
+                status:
+                  type: string
       responses:
         '200':    # status code
           description: A JSON array of user names
